[gd_scene load_steps=8 format=2]

[ext_resource path="res://PlaneController.gd" type="Script" id=1]
[ext_resource path="res://plane_body_material.tres" type="Material" id=2]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="BoxShape" id=4]

[sub_resource type="Animation" id=5]
resource_name = "DamageAnimation"

[node name="Plane" type="KinematicBody"]
script = ExtResource( 1 )

[node name="PlaneBody" type="MeshInstance" parent="."]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1.6, 0, 0, 0, 1.6, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 2 )

[node name="PlaneWings" type="MeshInstance" parent="."]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, -1.03425 )
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="WingCollision" type="CollisionShape" parent="."]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.03425 )
shape = SubResource( 4 )

[node name="ForwardFacingCameraTarget" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.947874, 0.318645, 0, -0.318645, 0.947874, 0, 3.71525, 11.7494 )

[node name="RearFacingCameraTarget" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -15.8202 )

[node name="ProjectileSpawnPoint1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.72865, 0, -3.06013 )

[node name="ProjectileSpawnPoint2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.65773, 0, -3.09883 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DamageAnimation = SubResource( 5 )
